fix contact page on mobile

--- a/css/sass/_layout/_index.scss
+++ b/css/sass/_layout/_index.scss
@@ -82,11 +82,22 @@
         height: 500px;    
     }
     
+    @media #{$max-tablet-portrait} {
+        height: 500px;    
+    }
+    
     @media #{$max-mobile} {
         text-align: center;
-
+        background-position-y: center;
+        background-position-x: center;
+        background-size: 800px auto; 
+        font-size: .9em;
+        height: 500px;
+        .container {
+            position: relative;
+        }
 		h1 {
-			margin-top: 30px;
+			margin-top: 80px;
 		}
     }
 }
